force-app/main/default/objects/Service_AMT__c/Service_AMT__c.object-meta.xml
<CustomObject>
    <label>Service AMT</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service AMT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service AMT</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>