force-app/main/default/objects/Service_AMT__c/fields/ACIS_Distribution__c.field-meta.xml
<CustomField>
    <fullName>ACIS_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACIS Distribution</label>
    <type>Checkbox</type>
</CustomField>