force-app/main/default/objects/Service_AMT__c/fields/All_Policy__c.field-meta.xml
<CustomField>
    <fullName>All_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Policy</label>
    <type>Checkbox</type>
</CustomField>