force-app/main/default/objects/Service_AMT__c/fields/Case_Management_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Management_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Management Start Date</label>
    <type>Date</type>
</CustomField>