force-app/main/default/objects/Service_AMT__c/fields/Exclude_AMT_Role_from_Survey__c.field-meta.xml
<CustomField>
    <fullName>Exclude_AMT_Role_from_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude AMT Role from Survey</label>
    <type>Checkbox</type>
</CustomField>