force-app/main/default/objects/Service_AMT__c/fields/External__c.field-meta.xml
<CustomField>
    <fullName>External__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External</label>
    <type>Checkbox</type>
</CustomField>