force-app/main/default/objects/Service_AMT__c/fields/Length_of_time_on_customer__c.field-meta.xml
<CustomField>
    <fullName>Length_of_time_on_customer__c</fullName>
    <formula>Case_Management_End_Date__c  -  Case_Management_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of time on customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>