force-app/main/default/objects/Service_AMT__c/fields/Policy10__c.field-meta.xml
<CustomField>
    <fullName>Policy10__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy10</label>
    <length>50</length>
    <type>Text</type>
</CustomField>