force-app/main/default/objects/Service_AMT__c/fields/Policy11__c.field-meta.xml
<CustomField>
    <fullName>Policy11__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy11</label>
    <length>50</length>
    <type>Text</type>
</CustomField>