force-app/main/default/objects/Service_AMT__c/fields/Policy12__c.field-meta.xml
<CustomField>
    <fullName>Policy12__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy12</label>
    <length>50</length>
    <type>Text</type>
</CustomField>