force-app/main/default/objects/Service_AMT__c/fields/Policy_Information_MultiChecKlist__c.field-meta.xml
<CustomField>
    <fullName>Policy_Information_MultiChecKlist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Information</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>