force-app/main/default/objects/Service_AMT__c/fields/Policy_Other__c.field-meta.xml
<CustomField>
    <fullName>Policy_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Other</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>