force-app/main/default/objects/Service_AMT__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Indicator</label>
    <type>Checkbox</type>
</CustomField>