force-app/main/default/objects/Service_AMT__c/fields/SCE_Validated__c.field-meta.xml
<CustomField>
    <fullName>SCE_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCE Validated</label>
    <type>Checkbox</type>
</CustomField>