force-app/main/default/objects/Service_AMT__c/fields/User_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Contact_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User/ Contact Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>