force-app/main/default/objects/Service_AMT__c/fields/UserHierarchy__c.field-meta.xml
<CustomField>
    <fullName>UserHierarchy__c</fullName>
    <defaultValue>1</defaultValue>
    <label>User Hierarchy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>