force-app/main/default/objects/Service_AMT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Policy_Information_MultiChecKlist__c</columns>
    <columns>Case_Management_End_Date__c</columns>
    <columns>Contact_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>contains</operation>
        <value>keysight</value>
    </filters>
    <label>All</label>
</ListView>