force-app/main/default/objects/Service_AMT__c/listViews/Debbie_s_List_AMT.listView-meta.xml
<ListView>
    <fullName>Debbie_s_List_AMT</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Company__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Policy_Information_MultiChecKlist__c</columns>
    <columns>Case_Management_End_Date__c</columns>
    <columns>Contact_Role__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Name__c</field>
        <operation>equals</operation>
        <value>Reinhart</value>
    </filters>
    <filters>
        <field>First_Name__c</field>
        <operation>equals</operation>
        <value>Mary</value>
    </filters>
    <label>Service AMT</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>